--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "linebreak-style": ["warn", "unix"],
     "quotes": ["warn", "single"],
     "semi": ["warn", "always"],
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "react/prop-types": "off" // Ignore missing prop validation
   }
 }
