--- a/.eslintrc
+++ b/.eslintrc
@@ -18,11 +18,11 @@
     "react"
   ],
   "rules": {
-    "indent": ["warn", 2],
+    "indent": "off",
     "linebreak-style": ["warn", "unix"],
-    "quotes": ["warn", "single"],
+    "quotes": "off",
     "semi": ["warn", "always"],
-    "no-unused-vars": "warn",
-    "react/prop-types": "off" // Ignore missing prop validation
+    "no-unused-vars": "off",
+    "react/prop-types": "warn" // Keeping prop-types rule as warning
   }
 }
