--- a/.github/workflows/main_tasksappaui.yml
+++ b/.github/workflows/main_tasksappaui.yml
@@ -29,7 +29,7 @@ jobs:
           npm run build --if-present
           
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r          
+        run: Compress-Archive -Path * -DestinationPath "release.zip"
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -53,7 +53,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: Expand-Archive -Path "release.zip"
       
       - name: Login to Azure
         uses: azure/login@v1
