--- a/.github/workflows/main_tasksappui.yml
+++ b/.github/workflows/main_tasksappui.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App -- tasksappui
+name: Build and deploy Node.js app to Azure Web App - tasksappui
 
 on:
   push:
@@ -21,10 +21,11 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -56,9 +57,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2C830D1B972F45BC936A4B278C92C2A2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_512F5ADF704141BEB755B3CBBFB5EB59 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E905B0884A3241C6836C13A322109427 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_201E6BB34FBE4110BEDAD6F3B7BD0855 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3110786C0748465EB00100AD5D95D25B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_969E9E5DABB144AF8F65051FA5B91750 }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
